--- a/AppDevProject_BookingSystem/AppDevProject_BookingSystem.csproj
+++ b/AppDevProject_BookingSystem/AppDevProject_BookingSystem.csproj
@@ -11,6 +11,21 @@
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -46,22 +61,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Authorisation.cs" />
-    <Compile Include="Bookings.cs" />
-    <Compile Include="CreationTables.cs" />
-    <Compile Include="Customers.cs" />
+    <Compile Include="App_Code\Authorisation.cs" />
+    <Compile Include="App_Code\Bookings.cs" />
+    <Compile Include="App_Code\CreationTables.cs" />
+    <Compile Include="App_Code\Customers.cs" />
     <Compile Include="DoubleBufferedPanel.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="EmailSettings.cs" />
-    <Compile Include="Employees.cs" />
+    <Compile Include="App_Code\EmailSettings.cs" />
+    <Compile Include="App_Code\Employees.cs" />
     <Compile Include="EmployeeSettings.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="EmployeeSettings.Designer.cs">
       <DependentUpon>EmployeeSettings.cs</DependentUpon>
     </Compile>
-    <Compile Include="Globals.cs" />
+    <Compile Include="App_Code\Globals.cs" />
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -94,9 +109,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StoringMapSettings.cs" />
-    <Compile Include="Singleton.cs" />
-    <Compile Include="Tables.cs" />
+    <Compile Include="App_Code\StoringMapSettings.cs" />
+    <Compile Include="App_Code\Singleton.cs" />
+    <Compile Include="App_Code\Tables.cs" />
     <Compile Include="TableSettings.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -153,6 +168,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\signin-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.5.2 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
